# sigmerge

./: LICENSE  README.md  pyproject.toml
sigmerge/: __init__.py  core.py
tests/: test_core.py
